# rusty-0x1

./: .gitignore  README.md
NoCargo/: hello_rust.rs
workspace_basics/: Cargo.toml
workspace_basics/database/: Cargo.toml
workspace_basics/database/src/: lib.rs
workspace_basics/shared-utils/: Cargo.toml
workspace_basics/shared-utils/src/: lib.rs
workspace_basics/web-server/: Cargo.toml
workspace_basics/web-server/src/: main.rs
